add python package script

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,7 @@ jobs:
             docker push developmentseed/geolambda:latest
             docker push developmentseed/geolambda:${VERSION}
             cd python
-            docker build --build-arg VERSION=${VERSION} --build-arg PYVER=3.6.1 . -t developmentseed/geolambda:${VERSION}-python36
+            docker build --build-arg VERSION=${VERSION} --build-arg PYVERSION=3.6.1 . -t developmentseed/geolambda:${VERSION}-python36
             docker push developmentseed/geolambda:${VERSION}-python36
             cd ..
             # deploy public Lambda layers
