--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,4 +1,4 @@
-GDAL==3.0.1
-rasterio==1.1.0 --no-binary rasterio
-shapely==1.6.4.post2
-pyproj==2.4.0
+GDAL==3.1.3
+rasterio==1.1.7 --no-binary rasterio
+shapely==1.7.1
+pyproj==2.6.1
