--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,4 +1,4 @@
-GDAL==3.1.3
-rasterio==1.1.7 --no-binary rasterio
+GDAL==3.2.1
+rasterio==1.2.0 --no-binary rasterio
 shapely==1.7.1
-pyproj==2.6.1
+pyproj==3.0.0.post1
